<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                               xmlns:app="http://schemas.android.com/apk/res-auto"
                               xmlns:tools="http://schemas.android.com/tools"
                               android:layout_width="match_parent"
                               android:layout_height="match_parent"
                               android:background="#FC121212"
                               android:clickable="false"
                               tools:context=".LoginPage"
                               android:id="@+id/loginPage">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/loginPage"
            app:layout_constraintBottom_toTopOf="@+id/buttonSection"
            android:id="@+id/loginDetail"
            tools:layout_editor_absoluteX="25dp" android:paddingLeft="15dp" android:paddingRight="15dp">
        <TextView
                android:id="@+id/forgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Penta inc."
                android:textColor="#03a1a4"
                android:textSize="17sp"
                app:fontFamily="@font/segoe_ui"
                android:gravity="right"
                android:layout_marginTop="20dp"/>
        <TextView
                android:text="@string/log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/editPersonalinfoText"
                android:textColor="#FFFFFF"
                app:fontFamily="@font/segoe_ui_bold"
                android:textSize="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/email"
                android:layout_marginTop="30dp">
            <TextView
                    android:text="username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/emailText"
                    android:textColor="#B4B4B4"
                    app:fontFamily="@font/segoe_ui_bold"
                    android:textSize="16sp"
                    android:textAllCaps="true"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/usernameInput"
                    android:textColor="#B4B4B4"
                    app:fontFamily="@font/segoe_ui"
                    android:textSize="18sp"
                    android:backgroundTint="#121212"/>
        </LinearLayout>
        <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4B4C50"
                android:layout_marginBottom="20dp"
        />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/userPass">
            <TextView
                    android:text="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/passText"
                    android:textColor="#B4B4B4"
                    app:fontFamily="@font/segoe_ui_bold"
                    android:textSize="16sp"
                    android:textAllCaps="true"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/userPassword"
                    android:textColor="#B4B4B4"
                    app:fontFamily="@font/segoe_ui"
                    android:textSize="18sp"
                    android:backgroundTint="#121212"/>
        </LinearLayout>
        <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4B4C50"
                android:layout_marginBottom="20dp"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/loginDetail"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#232429" android:id="@+id/buttonSection" android:paddingLeft="15dp"
            android:paddingRight="15dp" android:paddingTop="10dp" android:paddingBottom="10dp">

        <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="3"
                android:text="@string/titleSignup"
                android:textColor="#03A1A4"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#03A1A4"
                android:text="@string/log_in"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>